tests/paczka1/small_fuzzy/47564090.err
Error in line 6: qjz A907 99,3
Error in line 5: 9Q8 A907 97,3
